# personal-health-sync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
docs/: RELEASE_CHECKLIST.md
examples/: observations.csv  strava_config_example.json
healthsync/: __init__.py  cli.py  core.py
scripts/: health_fhir.py  mifitness_sync.py  mijia_health_sync.py  strava_set_tokens.py  strava_sync.py
tests/: test_core.py
