[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-health-sync"
version = "0.2.0"
description = "Local-first, vendor-neutral personal health data aggregation and portable reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "shkyyy18"}]
keywords = ["health-data", "strava", "xiaomi", "apple-health", "health-connect", "local-first"]
dependencies = []
classifiers = ["Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Operating System :: OS Independent"]

[project.optional-dependencies]
strava = ["requests>=2.28"]
xiaomi = ["requests>=2.28", "qrcode>=7.4", "python-mijiaAPI", "mi-fitness-mcp"]

[project.scripts]
healthsync = "healthsync.cli:main"

[project.urls]
Homepage = "https://github.com/shkyyy18/personal-health-sync"
Issues = "https://github.com/shkyyy18/personal-health-sync/issues"

[tool.setuptools.packages.find]
include = ["healthsync*"]
